--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,7 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+        dotnet-framework: 4.7.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
