--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -1,9 +1,8 @@
 name: Build and Publish Release
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches:
+      - Beta-Stable
 jobs:
   build:
     runs-on: windows-latest
