Default to false for debug mode

--- a/BLAZAM/appsettings.json.example
+++ b/BLAZAM/appsettings.json.example
@@ -7,7 +7,7 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
-  "DebugMode": "true",
+  "DebugMode": "false",
   "InstallType": "IIS",
   "ListeningAddress": "*",
   "HTTPPort": "79",
