--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Setup .NET Core SDK
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 6.x
+      #- name: Setup .NET Core SDK
+      #  uses: actions/setup-dotnet@v1
+      #  with:
+      #    dotnet-version: 6.x
       - name: Restore dependencies
         run: dotnet restore
       - name: Build application
