--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -23,12 +23,14 @@ jobs:
         run: dotnet publish -c Release -o bin\Publish
       - name: Set assembly version as environment variable
         shell: pwsh
+        id: get_version
         run: |
           $file = "bin\Publish\BLAZAM.dll";
           $versionInfo = (Get-Item $file).VersionInfo
           $fileVersion = $versionInfo.FileVersion
           $productVersion = $versionInfo.ProductVersion
           echo "##vso[task.setvariable variable=ASSEMBLY_VERSION]$fileVersion.$productVersion"
+      
       - name: Compress files
         run: Compress-Archive -Path bin\Publish\* -DestinationPath blazam-nightly.zip
       - name: Create Release
@@ -36,6 +38,7 @@ jobs:
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+          ASSEMBLY_VERSION: ${{ steps.get_version.outputs.file_version }}.${{ steps.get_version.outputs.product_version }}
         with:
           tag_name: ${{ github.ref }}
           release_name: ${{ env.ASSEMBLY_VERSION }}
