--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -9,16 +9,16 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: windows-latest
    
         
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      #- name: Setup .NET Core SDK
-      #  uses: actions/setup-dotnet@v1
-      #  with:
-      #    dotnet-version: 6.x
+      - name: Setup .NET Core SDK
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.x
       - name: Restore dependencies
         run: dotnet restore
       - name: Build application
