--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -33,9 +33,9 @@ jobs:
           $productVersion = $versionInfo.ProductVersion
           echo "ASSEMBLY_VERSION=$fileVersion.$productVersion" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
       - name: Show Version
-        run: echo $ASSEMBLY_VERSION
+        run: echo $env.ASSEMBLY_VERSION
       - name: Compress files
-        run: Compress-Archive -Path bin\Publish\* -DestinationPath blazam-nightly.zip
+        run: Compress-Archive -Path bin\Publish\* -DestinationPath ${{ env.ASSEMBLY_VERSION }}.zip
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -55,6 +55,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: blazam-nightly.zip
-          asset_name: blazam-nightly.zip
+          asset_path: ${{ env.ASSEMBLY_VERSION }}.zip
+          asset_name: ${{ env.ASSEMBLY_VERSION }}.zip
           asset_content_type: application/zip
