--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -46,8 +46,8 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: Nightly - v${{ env.ASSEMBLY_VERSION }}
           body: Automated release created by GitHub Actions
-          draft: true
-          prerelease: false
+          draft: false
+          prerelease: true
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
