--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -15,12 +15,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - uses: actions/cache@v1
-         with:
-           path: ~/.nuget/packages
-           key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
-           restore-keys: |
-             ${{ runner.os }}-nuget-
+      - name: Cache Nuget Packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v1
         with:
