--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -50,7 +50,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         
         with:
-          tag_name: ${{ github.ref }}/{{ env.ASSEMBLY_VERSION }}
+          tag_name: Nightly-v${{ env.ASSEMBLY_VERSION }}
           release_name: Nightly - v${{ env.ASSEMBLY_VERSION }}
           body: Automated release created by GitHub Actions
           draft: false
