--- a/BLAZAM/BLAZAM.csproj
+++ b/BLAZAM/BLAZAM.csproj
@@ -6,7 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<ServerGarbageCollection>false</ServerGarbageCollection>
 		<AssemblyVersion>0.6.6</AssemblyVersion>
-		<Version>2023.02.22.0223</Version>
+		<Version>2023.02.23.0114</Version>
 		<RootNamespace>BLAZAM.Server</RootNamespace>
 		<GenerateDocumentationFile>False</GenerateDocumentationFile>
 
@@ -93,6 +93,7 @@
 
 	<ItemGroup>
 		<Folder Include="Data\Services\RPC\" />
+		<Folder Include="Exceptions\ActiveDirectory\" />
 		<Folder Include="Shared\UI\General\" />
 	</ItemGroup>
 
