--- a/BLAZAM/BLAZAM.csproj
+++ b/BLAZAM/BLAZAM.csproj
@@ -6,7 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<ServerGarbageCollection>false</ServerGarbageCollection>
 		<AssemblyVersion>0.6.6</AssemblyVersion>
-		<Version>2023.02.26.2219</Version>
+		<Version>2023.02.28.1321</Version>
 		<RootNamespace>BLAZAM.Server</RootNamespace>
 		<GenerateDocumentationFile>False</GenerateDocumentationFile>
 
@@ -58,6 +58,8 @@
 		<PackageReference Include="Cassia" Version="2.0.0.60" />
 		<PackageReference Include="Core.System.Configuration.Install" Version="1.1.0" />
 		<PackageReference Include="DuoUniversal" Version="1.2.0" />
+		<PackageReference Include="ITfoxtec.Identity.Saml2" Version="4.8.4" />
+		<PackageReference Include="ITfoxtec.Identity.Saml2.MvcCore" Version="4.8.4" />
 		<PackageReference Include="MailKit" Version="3.5.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.13" />
@@ -92,6 +94,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Folder Include="Controllers\" />
 		<Folder Include="Data\Services\RPC\" />
 		<Folder Include="Exceptions\ActiveDirectory\" />
 		<Folder Include="Pages\Groups\" />
