Some actual tests

--- a/BLAZAM.Tests/BLAZAM.Tests.csproj
+++ b/BLAZAM.Tests/BLAZAM.Tests.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\BLAZAM\BLAZAM.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resouces\" />
+  </ItemGroup>
+
 </Project>
