--- a/BLAZAM/mkdocs.yml
+++ b/BLAZAM/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Blazam Documentation
 repo_url: https://github.com/Blazam-App/BLAZAM
-edit_uri: tree/Docs/BLAZAM/docs
+edit_uri: blob/Docs/BLAZAM/docsource
 docs_dir: docsource
 site_dir: wwwroot/docs
 theme: material
