--- a/BLAZAM/mkdocs.yml
+++ b/BLAZAM/mkdocs.yml
@@ -1,4 +1,7 @@
 site_name: Blazam Documentation
+site_description: Documentation for the Blazam application
+site_author: Chris Jacobsen
+copyright: Blazam 2023
 repo_url: https://github.com/Blazam-App/BLAZAM
 edit_uri: blob/Docs/BLAZAM/docsource
 docs_dir: docsource
