--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -22,6 +22,16 @@ jobs:
           key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
           restore-keys: |
             ${{ runner.os }}-nuget-
+
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
+      - name: Install MkDocs
+        run: pip install mkdocs
+        
+      - name: Install MkDocs-Material
+        run: pip install mkdocs-material
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v1
         with:
