--- a/BLAZAM/appsettings.json.example
+++ b/BLAZAM/appsettings.json.example
@@ -16,7 +16,8 @@
   "DatabaseType": "SQLite",
   "ConnectionStrings": {
     "SQLConnectionString": "Data Source=localhost;Database=BLAZAM;Persist Security Info=True;Integrated Security=False;Connection Timeout=10;TrustServerCertificate=True;",
-    "SQLiteConnectionString": "Data Source=%temp%/Blazam/database.db"
+    "SQLiteConnectionString": "Data Source=%temp%/Blazam/database.db;",
+    "MySQLConnectionString": "Server=localhost;User=blazam;Password=blazam;Database=blazam;"
   }
 
 }
