--- a/BLAZAM/appsettings.json.example
+++ b/BLAZAM/appsettings.json.example
@@ -7,6 +7,7 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
+  "EncryptionKey": "supersecretstring",
   "DebugMode": "false",
   "InstallType": "IIS",
   "ListeningAddress": "*",
