--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -56,21 +56,51 @@ jobs:
       #    body: Automated release created by GitHub Actions
       #    draft: false
       #    prerelease: true
-      - name: Update release
-        uses: johnwbyrd/update-release@v1.0.0
+     
+
+      #- name: Upload Release Asset
+      #  id: upload-release-asset
+      #  uses: actions/upload-release-asset@v1
+      #  env:
+      #    GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      #  with:
+      #    upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #    asset_path: blazam-nightly-v${{ env.ASSEMBLY_VERSION }}.zip
+      #    asset_name: blazam-nightly-v${{ env.ASSEMBLY_VERSION }}.zip
+      #    asset_content_type: application/zip
+
+
+
+      - name: Get Release ID
+        id: get_release_id
+        uses: "marvinpinto/action-automatic-releases@v1.2.1"
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          files:  blazam-nightly-v${{ env.ASSEMBLY_VERSION }}.zip
-          release: Nightly
-          body: Automated release created by GitHub Actions
-          prerelease: true
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
+          command: find
+          args: |
+            owner=Blazam-App
+            repo=BLAZAM
+            tag=Nightly
+
+      - name: Replace Asset
+        uses: actions/upload-artifact@v2
+        with:
+          name: Nightly.zip
+          path:  blazam-nightly-v${{ env.ASSEMBLY_VERSION }}.zip
+
+      - name: Delete Old Asset
+        run: |
+          curl \
+            -X DELETE \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/Blazam-App/BLAZAM/releases/assets/Nightly.zip"
+
+      - name: Upload New Asset
+        run: |
+          curl \
+            -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Content-Type: $(file -b --mime-type  blazam-nightly-v${{ env.ASSEMBLY_VERSION }}.zip)" \
+            --data-binary "@ blazam-nightly-v${{ env.ASSEMBLY_VERSION }}.zip" \
+            "https://uploads.github.com/repos/Blazam-App/BLAZAM/releases/RELEASE_ID/assets?name=Nightly.zip"
         env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: blazam-nightly-v${{ env.ASSEMBLY_VERSION }}.zip
-          asset_name: blazam-nightly-v${{ env.ASSEMBLY_VERSION }}.zip
-          asset_content_type: application/zip
+          RELEASE_ID: ${{ steps.get_release_id.outputs.id }}
