--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -29,12 +29,12 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build application
-        run: dotnet publish -c Release -o bin\Publish
+        run: dotnet publish -c Release -o bin/ublish
       - name: Set assembly version as environment variable
         shell: pwsh
         id: get_version
         run: |
-          $file = "BLAZAM\bin\Publish\BLAZAM.dll";
+          $file = "bin/Publish/BLAZAM.dll";
           $versionInfo = (Get-Item $file).VersionInfo
           $fileVersion = $versionInfo.FileVersion
           $productVersion = $versionInfo.ProductVersion
@@ -42,7 +42,7 @@ jobs:
       - name: Show Version
         run: echo $env.ASSEMBLY_VERSION
       - name: Compress files
-        run: Compress-Archive -Path BLAZAM\bin\Publish\* -DestinationPath blazam-nightly-v${{ env.ASSEMBLY_VERSION }}.zip
+        run: Compress-Archive -Path bin/Publish/* -DestinationPath blazam-nightly-v${{ env.ASSEMBLY_VERSION }}.zip
      
       #- name: Create Release
       #  id: create_release
