--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -41,8 +41,14 @@ jobs:
           echo "ASSEMBLY_VERSION=$fileVersion.$productVersion" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
       - name: Show Version
         run: echo $env.ASSEMBLY_VERSION
-      - name: Compress files
-        run: Compress-Archive -Path bin/publish/* -DestinationPath blazam-nightly-v${{ env.ASSEMBLY_VERSION }}.zip
+
+      - name: "Compress files"
+        uses: montudor/action-zip@v1
+        with:
+          args: zip -qq -r blazam-nightly.zip bin/publish
+      # Only works on windows
+      #- name: Compress files
+      #  run: Compress-Archive -Path bin/publish/* -DestinationPath blazam-nightly-v${{ env.ASSEMBLY_VERSION }}.zip
      
       #- name: Create Release
       #  id: create_release
@@ -76,4 +82,4 @@ jobs:
           tag: Nightly
           rm: true
           token: ${{ secrets.GITHUB_TOKEN }}
-          files: blazam-nightly-v${{ env.ASSEMBLY_VERSION }}.zip
+          files: blazam-nightly.zip
