Zip logs, only works with 7Zip right now

--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -73,6 +73,6 @@ jobs:
           tag_name: Dev
           name: 'Dev'
           prerelease: true
-          body: '${{ secrets.RELEASE_TOKEN }}'
+          body: This release is highly unstable. Expect bugs and crashed on this branch. Developers Only!
           files: |
             ./blazam-dev-v${{ env.ASSEMBLY_VERSION }}.zip
