Fix: Oops when Encryption Key missing from config

--- a/BLAZAM/mkdocs.yml
+++ b/BLAZAM/mkdocs.yml
@@ -22,6 +22,10 @@ nav:
             - 'Install': 'install/manual.md'
             - 'Configuration': 'install/config.md'
         - Security: 'install/security.md'
+        - Updating:
+            - 'Manual Updates': 'updates/manual.md'
+            - 'Self Updates': 'updates/self.md'
+            - 'Auto Updates': 'updates/auto.md'
     - Permissions:
         - 'Abstract': 'permissions/abstract.md'
     - About:
