--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -47,7 +47,7 @@ jobs:
 
 
       - name: Compress files
-        run: Compress-Archive -Path bin/publish/* -DestinationPath v${{ env.ASSEMBLY_VERSION }}-dev.zip
+        run: Compress-Archive -Path bin/publish/* -DestinationPath blazam-dev-v${{ env.ASSEMBLY_VERSION }}.zip
 
 
       # For Linux
@@ -55,9 +55,7 @@ jobs:
       #  uses: montudor/action-zip@v1
       #  with:
       #    args: zip -qq -r blazam-dev.zip bin/publish
-
-     
-
+      
       - name: Update dev release
         uses: andelf/nightly-release@main
         env:
@@ -66,6 +64,6 @@ jobs:
           tag_name: Dev
           name: 'Dev'
           prerelease: true
-          body: This release is highly unstable. Expect bugs and crashes on this branch. Developers Only!
+          body: This release is highly unstable. Expect bugs and crashed on this branch. Developers Only!
           files: |
-            ./v${{ env.ASSEMBLY_VERSION }}-dev.zip
+            ./blazam-dev-v${{ env.ASSEMBLY_VERSION }}.zip
