--- a/BLAZAM/BLAZAM - Backup (3).csproj
+++ b/BLAZAM/BLAZAM - Backup (3).csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -41,6 +41,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Blazorise" Version="1.2.0" />
+		<PackageReference Include="Blazorise.Bootstrap" Version="1.2.0" />
+		<PackageReference Include="Blazorise.Bootstrap5" Version="1.2.0" />
+		<PackageReference Include="Blazorise.Components" Version="1.2.0" />
+		<PackageReference Include="Blazorise.Cropper" Version="1.2.0" />
+		<PackageReference Include="Blazorise.DataGrid" Version="1.2.0" />
+		<PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.2.0" />
+		<PackageReference Include="Blazorise.LoadingIndicator" Version="1.2.0" />
+		<PackageReference Include="Blazorise.RichMudTextField " Version="1.2.0" />
+		<PackageReference Include="Blazorise.TreeView" Version="1.1.7" />
 		<PackageReference Include="BlazorTemplater" Version="1.5.1" />
 		<PackageReference Include="Cassia" Version="2.0.0.60" />
 		<PackageReference Include="Core.System.Configuration.Install" Version="1.1.0" />
