--- a/BLAZAM/BLAZAM.csproj
+++ b/BLAZAM/BLAZAM.csproj
@@ -6,7 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<ServerGarbageCollection>false</ServerGarbageCollection>
 		<AssemblyVersion>0.7.5</AssemblyVersion>
-		<Version>2023.04.11.1736</Version>
+		<Version>2023.04.11.1926</Version>
 		<RootNamespace>BLAZAM.Server</RootNamespace>
 		<GenerateDocumentationFile>False</GenerateDocumentationFile>
 
@@ -78,7 +78,7 @@
 		<PackageReference Include="MudBlazor.Markdown" Version="0.1.0" />
 		<PackageReference Include="MudBlazor.ThemeManager" Version="1.0.7" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-		<PackageReference Include="Octokit" Version="5.0.0" />
+		<PackageReference Include="Octokit" Version="5.0.3" />
 		<PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
 		<PackageReference Include="SixLabors.ImageSharp.Web" Version="2.0.2" />
@@ -95,6 +95,9 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\BLAZAMCommon\BLAZAMCommon.csproj" />
+	  <ProjectReference Include="..\BLAZAMFileSystem\BLAZAMFileSystem.csproj" />
+	  <ProjectReference Include="..\BLAZAMLoggers\BLAZAMLogger.csproj" />
+	  <ProjectReference Include="..\BlazamUpdate\BLAZAMUpdate.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
