--- a/BLAZAMCommon/BLAZAMCommon.csproj
+++ b/BLAZAMCommon/BLAZAMCommon.csproj
@@ -40,4 +40,9 @@
     <PackageReference Include="System.Management" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BLAZAMFileSystem\BLAZAMFileSystem.csproj" />
+    <ProjectReference Include="..\BLAZAMLoggers\BLAZAMLogger.csproj" />
+  </ItemGroup>
+
 </Project>
