--- a/BLAZAMGui/BLAZAMGui.csproj
+++ b/BLAZAMGui/BLAZAMGui.csproj
@@ -18,20 +18,24 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.2" />
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="7.0.2" />
     <PackageReference Include="MudBlazor" Version="6.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BLAZAMCommon\BLAZAMCommon.csproj" />
+    <ProjectReference Include="..\BLAZAMEmail\BLAZAMEmail.csproj" />
     <ProjectReference Include="..\BLAZAMLocalization\BLAZAMLocalization.csproj" />
     <ProjectReference Include="..\BLAZAMLoggers\BLAZAMLogger.csproj" />
     <ProjectReference Include="..\BLAZAMServices\BLAZAMServices.csproj" />
+    <ProjectReference Include="..\BLAZAMStatic\BLAZAMStatic.csproj" />
     <ProjectReference Include="..\BlazamUpdate\BLAZAMUpdate.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="UI\General\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
